# shadow

./: README.md
.github/workflows/: release.yml
apps/shadow/: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  package.json
apps/shadow/scripts/: dev.js
apps/shadow/src/: capture_engine.rs  config.rs  main.rs  server.rs  utils.rs
apps/shadow/src/agent/: context_budget.rs  decomposer.rs  intent_classifier.rs  mod.rs  pattern.rs  prompt_builder.rs  runtime.rs  tool_cache.rs  vision_agent.rs
apps/shadow/src/agent/tools/: ax.rs  memory.rs  mod.rs  search.rs
apps/shadow/src/capture/: accessibility.rs  audio.rs  detect.rs  input.rs  meeting.rs  mod.rs  screen.rs  window.rs
apps/shadow/src/capture/passive/: calendar.rs  clipboard.rs  fs.rs  git.rs  mod.rs  notifications.rs  terminal.rs
apps/shadow/src/intelligence/: context.rs  delivery_manager.rs  embeddings.rs  grounding.rs  lora.rs  meeting.rs  mod.rs  model_manager.rs  proactive.rs  safety.rs  summary_queue.rs  transcription.rs  trust_tuner.rs
apps/shadow/src/llm/: mod.rs  ollama.rs  openai_compat.rs  orchestrator.rs
apps/shadow/src/memory/: consolidator.rs  directive.rs  mod.rs  query_planner.rs  semantic.rs
apps/shadow/src/mimicry/: executor.rs  matcher.rs  mod.rs  planner.rs  procedure.rs  synthesizer.rs  types.rs  undo_manager.rs
apps/shadow/src/ocr/: mod.rs
apps/shadow/src/video/: mod.rs
crates/ghost-core/: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
crates/ghost-core/src/: lib.rs
crates/ghost-core/src/cdp/: mod.rs
crates/ghost-core/src/learning/: mod.rs
crates/ghost-core/src/recipe/: engine.rs  mod.rs  store.rs  types.rs
crates/ghost-eyes/: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
crates/ghost-eyes/src/: accessibility.rs  input.rs  lib.rs  screen.rs  window.rs
crates/ghost-hands/: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
crates/ghost-hands/src/: click.rs  keyboard.rs  lib.rs  linux.rs  scroll.rs  window.rs
crates/shadow-core/: CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
crates/shadow-core/src/: behavioral.rs  lib.rs  retention.rs  search.rs  timeline.rs  vector.rs  workflow_extractor.rs
