[package]
name = "ghost-core"
version = "0.0.1"
edition = "2021"
description = "Core automation primitives (recipes, store) for the Ghost desktop-automation MCP server."
license = "Apache-2.0"
repository = "https://github.com/amajorai/ghost"

[lib]
name = "ghost_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
dirs = "6"
tokio = { version = "1", features = ["sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
