[package]
name = "shadow-core"
version = "0.0.1"
edition = "2021"

[lib]
name = "shadow_core"

[dependencies]
rmp-serde = "1.3"
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
zstd = "0.13"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tantivy = "0.22"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[dev-dependencies]
tempfile = "3"